--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-test-app",
+  "name": "https://vazhaburduli.github.io/my-test-app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
